5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4134/executions/1618_2920.log
== TEST (2019-04-02 11:18:53) 
-- CODE:
peso = float(input("Quantas gramas possui seu prato? "))
beb = int(input("Numero de bebidas: "))
sobm = int(input("Numero de sobremesas: "))

precoa = 26.90
precob = 3.50
precoc = 3.00

eq = ((preco*peso)/1000) + (beb*precob) + (precoc*sobm)

print(eq)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    eq = ((preco*peso)/1000) + (beb*precob) + (precoc*sobm)
NameError: name 'preco' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:19:11) 
-- CODE:
peso = float(input("Quantas gramas possui seu prato? "))
beb = int(input("Numero de bebidas: "))
sobm = int(input("Numero de sobremesas: "))

precoa = 26.90
precob = 3.50
precoc = 3.00

eq = ((precoa*peso)/1000) + (beb*precob) + (precoc*sobm)

print(eq)


-- OUTPUT:
24.105628
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 11:19:21) 
-- CODE:
peso = float(input("Quantas gramas possui seu prato? "))
beb = int(input("Numero de bebidas: "))
sobm = int(input("Numero de sobremesas: "))

precoa = 26.90
precob = 3.50
precoc = 3.00

eq = ((precoa*peso)/1000) + (beb*precob) + (precoc*sobm)

print(eq)


-- EXECUTION TIME:
0.148709
-- TEST CASE 1:
---- input:
896.12
0
0
---- correct output:
24.11
---- user output:
24.105628
-- TEST CASE 2:
---- input:
389.03
1
0
---- correct output:
13.96
---- user output:
13.964906999999998
-- TEST CASE 3:
---- input:
225.89
0
1
---- correct output:
9.08
---- user output:
9.076440999999999
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:19:32) 
-- CODE:
peso = float(input("Quantas gramas possui seu prato? "))
beb = int(input("Numero de bebidas: "))
sobm = int(input("Numero de sobremesas: "))

precoa = 26.90
precob = 3.50
precoc = 3.00

eq = ((precoa*peso)/1000) + (beb*precob) + (precoc*sobm)

print(eq)


-- OUTPUT:
24.105628
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 11:19:51) 
-- CODE:
peso = float(input("Quantas gramas possui seu prato? "))
beb = int(input("Numero de bebidas: "))
sobm = int(input("Numero de sobremesas: "))

precoa = 26.90
precob = 3.50
precoc = 3.00

eq = ((precoa*peso)/1000) + (beb*precob) + (precoc*sobm)

print(eq)


-- EXECUTION TIME:
0.145768
-- TEST CASE 1:
---- input:
896.12
0
0
---- correct output:
24.11
---- user output:
24.105628
-- TEST CASE 2:
---- input:
389.03
1
0
---- correct output:
13.96
---- user output:
13.964906999999998
-- TEST CASE 3:
---- input:
225.89
0
1
---- correct output:
9.08
---- user output:
9.076440999999999
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:23:35) 
-- CODE:
peso = float(input("Quantas gramas possui seu prato? "))
beb = int(input("Numero de bebidas: "))
sobm = int(input("Numero de sobremesas: "))

precoa = 26.90
precob = 3.50
precoc = 3.00

eq = ((precoa*peso/1000)) + (beb*precob) + (precoc*sobm)

print(eq)


-- OUTPUT:
24.105628
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:25:16) 
-- CODE:
peso = float(input("Quantas gramas possui seu prato? "))
beb = int(input("Numero de bebidas: "))
sobm = int(input("Numero de sobremesas: "))

precoa = 26.90
precob = 3.50
precoc = 3.00

x = peso/1000

eq = (precoa*x) + (beb*precob) + (precoc*sobm)

print(eq)


-- OUTPUT:
24.105628
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 11:25:22) 
-- CODE:
peso = float(input("Quantas gramas possui seu prato? "))
beb = int(input("Numero de bebidas: "))
sobm = int(input("Numero de sobremesas: "))

precoa = 26.90
precob = 3.50
precoc = 3.00

x = peso/1000

eq = (precoa*x) + (beb*precob) + (precoc*sobm)

print(eq)


-- EXECUTION TIME:
0.158641
-- TEST CASE 1:
---- input:
896.12
0
0
---- correct output:
24.11
---- user output:
24.105628
-- TEST CASE 2:
---- input:
389.03
1
0
---- correct output:
13.96
---- user output:
13.964906999999998
-- TEST CASE 3:
---- input:
225.89
0
1
---- correct output:
9.08
---- user output:
9.076440999999999
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:27:21) 
-- CODE:
peso = float(input("Quantas gramas possui seu prato? "))
beb = int(input("Numero de bebidas: "))
sobm = int(input("Numero de sobremesas: "))

precoa = 26.90
precob = 3.50
precoc = 3.00

x = peso/1000

eq = (precoa*x) + (beb*precob) + (precoc*sobm)

print(round(eq, 2)


-- ERROR:
File "XXXX", line 15
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:27:32) 
-- CODE:
peso = float(input("Quantas gramas possui seu prato? "))
beb = int(input("Numero de bebidas: "))
sobm = int(input("Numero de sobremesas: "))

precoa = 26.90
precob = 3.50
precoc = 3.00

x = peso/1000

eq = (precoa*x) + (beb*precob) + (precoc*sobm)

print(round(eq, 2)
-- ERROR:
File "XXXX", line 14
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:27:44) 
-- CODE:
peso = float(input("Quantas gramas possui seu prato? "))
beb = int(input("Numero de bebidas: "))
sobm = int(input("Numero de sobremesas: "))

precoa = 26.90
precob = 3.50
precoc = 3.00

x = peso/1000

eq = (precoa*x) + (beb*precob) + (precoc*sobm)

print(eq)
-- OUTPUT:
24.105628
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:28:19) 
-- CODE:
peso = float(input("Quantas gramas possui seu prato? "))
beb = int(input("Numero de bebidas: "))
sobm = int(input("Numero de sobremesas: "))

precoa = 26.90
precob = 3.50
precoc = 3.00

x = peso/1000

eq = (precoa*x) + (beb*precob) + (precoc*sobm)
print(round(eq, 2))
-- OUTPUT:
24.11
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 11:28:27) 
-- CODE:
peso = float(input("Quantas gramas possui seu prato? "))
beb = int(input("Numero de bebidas: "))
sobm = int(input("Numero de sobremesas: "))

precoa = 26.90
precob = 3.50
precoc = 3.00

x = peso/1000

eq = (precoa*x) + (beb*precob) + (precoc*sobm)
print(round(eq, 2))
-- EXECUTION TIME:
0.128618
-- TEST CASE 1:
---- input:
896.12
0
0
---- correct output:
24.11
---- user output:
24.11
-- TEST CASE 2:
---- input:
389.03
1
0
---- correct output:
13.96
---- user output:
13.96
-- TEST CASE 3:
---- input:
225.89
0
1
---- correct output:
9.08
---- user output:
9.08
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
